Added footer section, final commit of intial version
Implemented initial layout and styling of footer as per lesson specifications. Also this is the last commit of initial version.

--- a/style.css
+++ b/style.css
@@ -217,3 +217,15 @@ header {
     border: solid 2px #F9FAF8;
     font-weight: 800;
 }
+/* End of interact */
+
+/* footer-section starts */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #E5E7EB;
+    padding: 44px 0;
+}
